// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-jeraig cmPeuo"
  >
    <div
      class="sc-eGRUor isvqVK"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-jeraig cmPeuo"
  >
    <div
      class="sc-dvQaRk oMNUp"
    >
      <div
        class="sc-jIkXHa iRCYUE"
      >
        Max column width:
        <input
          class="sc-ZOtfp gdOzLT"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-hiCibw icznka"
  >
    <div
      class="sc-ehCJOs gdYafI"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-hiCibw icznka"
  >
    <pre
      class="sc-eJwWfJ jmJiTX"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
